# corsair

./: CMakeLists.txt  README.md
cli/: CMakeLists.txt  main.c
core/: CMakeLists.txt
core/types/: CMakeLists.txt  corsair_bool.c  corsair_bool.h  corsair_types.h
core/utils/: CMakeLists.txt  fmtalloc.c  fmtalloc.h  iotools.c  iotools.h
